add content description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">Stock Hawk</string>
 
     <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
@@ -13,16 +13,26 @@
     <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>
 
     <string name="pref_display_mode_absolute_key">absolute</string>
+    <!-- Content description for isplay mode absolute -->
+    <string name="pref_display_mode_absolute_key_desc">Display mode absolute</string>
     <string name="pref_display_mode_percentage_key">percentage</string>
+    <!-- Content description for Display mode percentage -->
+    <string name="pref_display_mode_percentage_key_desc">Display mode percentage</string>
 
     <string name="default_stocks_yahoo">YHOO</string>
     <string name="default_stocks_apple">AAPL</string>
     <string name="default_stocks_microsoft">MSFT</string>
     <string name="default_stocks_facebook">FB</string>
 
+    <!-- Content description for view adapter -->
+    <string name="pref_symbol_key_desc">Symbol : <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="pref_price_key_desc">Price : <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="pref_change_key_desc">Chenge : <xliff:g id="condition">%1$s</xliff:g></string>
 
     <string name="action_change_units">@string/pref_display_mode_key</string>
 
+    <!-- Content description for Add Stock button -->
+    <string name="pref_add_button_desc">Add Stock</string>
 
     <string name="dialog_title">Add Stock</string>
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
