--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">Stock Hawk</string>
 
+    <string name="title_detail_activity">Detail Activity</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
     <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
 
     <string name="pref_stocks_key">stocks</string>
 
     <string name="chart_no_data">No data</string>
-
 
     <string name="pref_display_mode_title">Display Mode</string>
     <string name="pref_display_mode_key">displayMode</string>
@@ -25,9 +29,15 @@
     <string name="default_stocks_facebook">FB</string>
 
     <!-- Content description for view adapter -->
-    <string name="pref_symbol_key_desc">Symbol : <xliff:g id="condition">%1$s</xliff:g></string>
-    <string name="pref_price_key_desc">Price : <xliff:g id="condition">%1$s</xliff:g></string>
-    <string name="pref_change_key_desc">Chenge : <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="pref_symbol_key_desc">Symbol :
+        <xliff:g id="condition">%1$s</xliff:g>
+    </string>
+    <string name="pref_price_key_desc">Price :
+        <xliff:g id="condition">%1$s</xliff:g>
+    </string>
+    <string name="pref_change_key_desc">Change :
+        <xliff:g id="condition">%1$s</xliff:g>
+    </string>
 
     <string name="action_change_units">@string/pref_display_mode_key</string>
 
@@ -40,10 +50,33 @@
     <string name="dialog_add">Add</string>
 
     <string name="error_stock_not_found">Symbol %s is invalid!</string>
-    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
-    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
+    <string name="error_no_network">No network connectivity! Will load stock cursor when the network
+        is available.
+    </string>
+    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.
+    </string>
 
-    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
+    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network
+        available.
+    </string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
+
+    <!-- Label for the fonts preference -->
+    <string name="pref_fonts_label">Change Fonts</string>
+
+    <!-- Label for the fonts key preference -->
+    <string name="pref_fonts_key" translatable="false">fonts</string>
+
+    <!-- Label for the fonts default  preference -->
+    <string name="pref_fonts_label_default" translatable="false">Default</string>
+
+    <!-- Label for the fonts arabic preference -->
+    <string name="pref_fonts_label_arabic" translatable="false">Arabic</string>
+
+    <!-- Value in SharedPreferences for Default font option -->
+    <string name="pref_fonts_default" translatable="false">default</string>
+
+    <!-- Value in SharedPreferences for Default font option -->
+    <string name="pref_fonts_arabic" translatable="false">arabic</string>
 
 </resources>
