--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,11 @@
     <!-- Content description for Add Stock button -->
     <string name="pref_add_button_desc">Add Stock</string>
 
+    <!-- Content description for stock history -->
+    <string name="pref_symbol_stock_desc">Symbol : <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="pref_date_desc">Date : <xliff:g id="condition">%1$s</xliff:g></string>
+    <string name="pref_adjs_close_stock">Adjust Close : <xliff:g id="condition">%1$s</xliff:g></string>
+
     <string name="dialog_title">Add Stock</string>
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
     <string name="dialog_cancel">Cancel</string>
